--- a/monitoring/uss_qualifier/Makefile
+++ b/monitoring/uss_qualifier/Makefile
@@ -7,15 +7,15 @@ validate-docs:
 
 .PHONY: python-lint
 python-lint:
-	docker run --rm -v $(CURDIR):/code -w /code pyfound/black:22.10.0 black --check . || (echo "Linter didn't succeed. You can use the following command to fix python linter issues: make format" && exit 1)
+	docker run --rm -v "$(CURDIR):/code" -w /code pyfound/black:22.10.0 black --check . || (echo "Linter didn't succeed. You can use the following command to fix python linter issues: make format" && exit 1)
 
 .PHONY: shell-lint
 shell-lint:
-	find . -name '*.sh' | xargs docker run --rm -v $(CURDIR):/code -w /code koalaman/shellcheck
+	find . -name '*.sh' | xargs docker run --rm -v "$(CURDIR):/code" -w /code koalaman/shellcheck
 
 .PHONY: format
 format: format-documentation
-	docker run --rm -v $(CURDIR):/code -w /code pyfound/black:22.10.0 black .
+	docker run --rm -v "$(CURDIR):/code" -w /code pyfound/black:22.10.0 black .
 
 .PHONY: format-documentation
 format-documentation:
