add activated flight intent to kentland test data

--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
@@ -107,3 +107,52 @@ intents:
       operator_id: CHEo5kut30e0mt01-qwe
       uas_id: ''
       uas_type_certificate: ''
+- reference_time: '2023-01-01T00:00:00+00:00'
+  request:
+      operational_intent:
+          volumes:
+              - volume:
+                    outline_polygon:
+                        vertices:
+                            - lat: 37.19389846157564
+                              lng: -80.57843722762006
+                            - lat: 37.19542873284961
+                              lng: -80.57744077506473
+                            - lat: 37.19621141165609
+                              lng: -80.578531141435
+                            - lat: 37.19610765396546
+                              lng: -80.57910946528506
+                            - lat: 37.19626017503177
+                              lng: -80.57953226320937
+                            - lat: 37.19516471659203
+                              lng: -80.58067042878767
+                    altitude_lower:
+                        value: 483
+                        reference: W84
+                        units: M
+                    altitude_upper:
+                        value: 519
+                        reference: W84
+                        units: M
+                time_start:
+                    value: '2023-01-01T00:02:00+00:00'
+                    format: RFC3339
+                time_end:
+                    value: '2023-01-01T00:12:15+00:00'
+                    format: RFC3339
+          state: Activated
+          off_nominal_volumes: []
+          priority: 100
+      # TODO: Remove flight_authorisation section when it is optional
+      flight_authorisation:
+          uas_serial_number: 1AF49UL5CC5J6K
+          operation_category: Open
+          operation_mode: Bvlos
+          uas_class: C0
+          identification_technologies: ['N/A']
+          connectivity_methods: ['N/A']
+          endurance_minutes: 30
+          emergency_procedure_url: https://example.uav.com/emergency
+          operator_id: CHEo5kut30e0mt01-qwe
+          uas_id: ''
+          uas_type_certificate: ''
