[CI] Collect local logs and upload them as CI run artifacts (#26)
* [CI] Collect local logs and upload them as CI run artifacts

* name steps of artifact upload

* upload artifacts even when tests fail

* add report to artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,20 @@ jobs:
       run: |
         cd monitoring/uss_qualifier
         make test
+    - name: Save containers and tracer logs as artifact
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: monitoring-tests-logs
+        path: |
+          logs
+          monitoring/mock_uss/tracer/logs
+    - name: Save USS qualifier report as artifact
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: monitoring-tests-report
+        path: |
+          monitoring/uss_qualifier/report.gv
+          monitoring/uss_qualifier/report.json
+          monitoring/uss_qualifier/tested_requirements.html
