Directly query Service Providers in RID nominal behavior test

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -18,4 +18,5 @@ actions:
         service_providers: service_providers
         observers: observers
         evaluation_configuration: evaluation_configuration
+        dss_pool: dss_instances
     on_failure: Continue
