--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
@@ -64,6 +64,15 @@ v1:
                 evaluation_configuration:
                     resource_type: resources.netrid.EvaluationConfigurationResource
                     specification: { }
+                rid_dss_pool:
+                    resource_type: resources.astm.f3411.DSSInstancesResource
+                    dependencies:
+                        auth_adapter: utm_auth
+                    specification:
+                        dss_instances:
+                            - participant_id: uss8082
+                              rid_version: F3411-19
+                              base_url: http://host.docker.internal:8082
 
         action:
             test_suite:
@@ -79,6 +88,7 @@ v1:
                     service_providers: service_providers
                     observers: observers
                     evaluation_configuration: evaluation_configuration
+                    rid_dss_pool: rid_dss_pool
 
                 suite_definition:  # In-configuration definition of what tests to run
                     name: UFT automated test suite
@@ -96,6 +106,7 @@ v1:
                         service_providers: resources.netrid.NetRIDServiceProviders
                         observers: resources.netrid.NetRIDObserversResource
                         evaluation_configuration: resources.netrid.EvaluationConfigurationResource
+                        rid_dss_pool: resources.astm.f3411.DSSInstancesResource?
                     actions:
                         - test_suite:
                               suite_type: suites.astm.utm.f3548_21
@@ -112,6 +123,7 @@ v1:
                                   service_providers: service_providers
                                   observers: observers
                                   evaluation_configuration: evaluation_configuration
+                                  dss_pool: rid_dss_pool
                               on_failure: Continue
 
     artifacts:
