Add option to redact access token signatures

--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
@@ -59,7 +59,8 @@ v1:
           dss: dss
 
   artifacts:
-    report_path: report.json
+    report:
+      report_path: report.json
     tested_roles:
       report_path: tested_requirements.html
       roles: []
