--- a/monitoring/uss_qualifier/configurations/dev/artifacts.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/artifacts.yaml
@@ -1,6 +1,8 @@
 # These are configuration parameters for artifacts in a USSQualifierConfiguration
 # to be produced in the uss_qualifier folder.
 relative:
-  report_path: report.json
+  report:
+    report_path: report.json
+    redact_access_tokens: true
   graph:
     gv_path: report.gv
