--- a/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
@@ -29,6 +29,18 @@ net_rid:
   netrid_observation_evaluation_configuration:
     resource_type: resources.netrid.EvaluationConfigurationResource
     specification: {}
+  netrid_dss_instances:
+      resource_type: resources.astm.f3411.DSSInstancesResource
+      dependencies:
+          auth_adapter: utm_auth
+      specification:
+          dss_instances:
+              - participant_id: uss1
+                rid_version: F3411-19
+                base_url: http://localhost:8082
+              - participant_id: uss2
+                rid_version: F3411-19
+                base_url: http://localhost:8082
 
 net_rid_sims:
   adjacent_circular_flights_data:
@@ -50,7 +62,7 @@ net_rid_sims:
       flight_record_collection_path: "./test_data/usa/netrid/dcdemo_flights.json"
 
 flight_auth:
-  $ref: '#/f3548_che'
+  $ref: '#/f3548'
   invalid_flight_auth_flights:
     resource_type: resources.flight_planning.FlightIntentsResource
     specification:
