Add F3411-22a support to mock_uss

--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -29,7 +29,7 @@ net_rid:
   netrid_observation_evaluation_configuration:
     resource_type: resources.netrid.EvaluationConfigurationResource
     specification: {}
-  netrid_dss_instances:
+  netrid_dss_instances_v19:
     resource_type: resources.astm.f3411.DSSInstancesResource
     dependencies:
       auth_adapter: utm_auth
