--- a/monitoring/uss_qualifier/suites/dev/local_test.yaml
+++ b/monitoring/uss_qualifier/suites/dev/local_test.yaml
@@ -14,7 +14,7 @@ resources:
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
   dss: resources.astm.f3548.v21.DSSInstanceResource
 
-  netrid_dss_instances: resources.astm.f3411.DSSInstancesResource
+  netrid_dss_instances_v19: resources.astm.f3411.DSSInstancesResource
 actions:
 - test_suite:
     suite_type: suites.interuss.generate_test_data
@@ -37,5 +37,5 @@ actions:
       service_providers: service_providers
       observers: observers
       evaluation_configuration: evaluation_configuration
-      netrid_dss_instances: netrid_dss_instances
+      netrid_dss_instances: netrid_dss_instances_v19
   on_failure: Continue
