Add canonical schema compliance checks for RID flights queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ implicitdict==2.1.0
 itsdangerous==2.0.1 # Version 2.1.0 is not compatible with flask 1.1.2.
 Jinja2==3.0.3 # See https://github.com/interuss/dss/issues/745
 jsonpath-ng==1.5.3  # uss_qualifier
+jsonschema==4.17.3  # uss_qualifier
 jwcrypto==1.4
 kubernetes==23.3.0  # deployment_manager
 locust==1.2.2  # loadtest
