--- a/monitoring/Makefile
+++ b/monitoring/Makefile
@@ -3,23 +3,27 @@ lint:
 	cd uss_qualifier && make lint
 	cd mock_uss && make lint
 	cd monitorlib && make lint
+	cd prober && make lint
 
 .PHONY: python-lint
 python-lint:
 	cd uss_qualifier && make python-lint
 	cd mock_uss && make python-lint
 	cd monitorlib && make python-lint
+	cd prober && make python-lint
 
 .PHONY: shell-lint
 shell-lint:
 	cd uss_qualifier && make shell-lint
 	cd mock_uss && make shell-lint
+	cd prober && make shell-lint
 
 .PHONY: format
 format:
 	cd uss_qualifier && make format
 	cd mock_uss && make format
 	cd monitorlib && make format
+	cd prober && make format
 
 .PHONY: build
 build:
