[ci][prober] Run prober in CI and capture report as artifact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,10 @@ jobs:
       run: |
         cd monitoring/uss_qualifier
         make test
+    - name: prober tests
+      run: |
+        cd monitoring/prober
+        make test
     - name: Save containers and tracer logs as artifact
       if: always()
       uses: actions/upload-artifact@v3
@@ -70,8 +74,9 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: monitoring-tests-report
+        name: monitoring-tests-reports
         path: |
           monitoring/uss_qualifier/report.gv
           monitoring/uss_qualifier/report.json
           monitoring/uss_qualifier/tested_requirements.html
+          monitoring/prober/prober_test_results.xml
