--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
-e2e_test_result
+prober_test_results.xml
 test_result
 
 # Translations
@@ -121,7 +121,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-test/e2e_test_result
+
 
 # local go builds
 go
