[uss_qualifier] Add flight intents mutation mechanism

--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
@@ -58,65 +58,9 @@ intents:
       operator_id: CHEo5kut30e0mt01-qwe
       uas_id: ''
       uas_type_certificate: ''
-- reference_time: '2023-01-01T00:00:00+00:00'
-  request:
-      operational_intent:
-          volumes:
-              - volume:
-                    outline_polygon:
-                        vertices:
-                            - lat: 37.19330428406196
-                              lng: -80.59314014213832
-                            - lat: 37.19026757574101
-                              lng: -80.59428502333573
-                            - lat: 37.18526788213324
-                              lng: -80.59005346211121
-                            - lat: 37.1837232669677
-                              lng: -80.58471856692397
-                            - lat: 37.18696946882951
-                              lng: -80.58072507989046
-                            - lat: 37.19117638063535
-                              lng: -80.57796221630451
-                            - lat: 37.19735957232225
-                              lng: -80.56931360695863
-                            - lat: 37.19892943598067
-                              lng: -80.57104154088566
-                            - lat: 37.19763628976819
-                              lng: -80.57674276197271
-                            - lat: 37.19465764212709
-                              lng: -80.58235632399915
-                            - lat: 37.19637327692024
-                              lng: -80.58569665094863
-                    altitude_lower:
-                        value: 474
-                        reference: W84
-                        units: M
-                    altitude_upper:
-                        value: 560
-                        reference: W84
-                        units: M
-                time_start:
-                    value: '2023-01-01T00:03:00+00:00'
-                    format: RFC3339
-                time_end:
-                    value: '2023-01-01T00:08:00+00:00'
-                    format: RFC3339
-          state: Activated
-          off_nominal_volumes: []
-          priority: 0
-      # TODO: Remove flight_authorisation section when it is optional
-      flight_authorisation:
-          uas_serial_number: 1AF49UL5CC5J6K
-          operation_category: Open
-          operation_mode: Bvlos
-          uas_class: C0
-          identification_technologies: ['N/A']
-          connectivity_methods: ['N/A']
-          endurance_minutes: 30
-          emergency_procedure_url: https://example.uav.com/emergency
-          operator_id: CHEo5kut30e0mt01-qwe
-          uas_id: ''
-          uas_type_certificate: ''
+  mutations:
+    activated:
+      state: Activated
 - reference_time: '2023-01-01T00:00:00+00:00'
   request:
     operational_intent:
@@ -166,52 +110,6 @@ intents:
       operator_id: CHEo5kut30e0mt01-qwe
       uas_id: ''
       uas_type_certificate: ''
-- reference_time: '2023-01-01T00:00:00+00:00'
-  request:
-      operational_intent:
-          volumes:
-              - volume:
-                    outline_polygon:
-                        vertices:
-                            - lat: 37.19389846157564
-                              lng: -80.57843722762006
-                            - lat: 37.19542873284961
-                              lng: -80.57744077506473
-                            - lat: 37.19621141165609
-                              lng: -80.578531141435
-                            - lat: 37.19610765396546
-                              lng: -80.57910946528506
-                            - lat: 37.19626017503177
-                              lng: -80.57953226320937
-                            - lat: 37.19516471659203
-                              lng: -80.58067042878767
-                    altitude_lower:
-                        value: 483
-                        reference: W84
-                        units: M
-                    altitude_upper:
-                        value: 519
-                        reference: W84
-                        units: M
-                time_start:
-                    value: '2023-01-01T00:02:00+00:00'
-                    format: RFC3339
-                time_end:
-                    value: '2023-01-01T00:12:15+00:00'
-                    format: RFC3339
-          state: Activated
-          off_nominal_volumes: []
-          priority: 100
-      # TODO: Remove flight_authorisation section when it is optional
-      flight_authorisation:
-          uas_serial_number: 1AF49UL5CC5J6K
-          operation_category: Open
-          operation_mode: Bvlos
-          uas_class: C0
-          identification_technologies: ['N/A']
-          connectivity_methods: ['N/A']
-          endurance_minutes: 30
-          emergency_procedure_url: https://example.uav.com/emergency
-          operator_id: CHEo5kut30e0mt01-qwe
-          uas_id: ''
-          uas_type_certificate: ''
+  mutations:
+    activated:
+      state: Activated
