[docker containers and scripts] Change handling of output to host and how repo is loaded

--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -20,6 +20,7 @@ RUN pip install -r /app/monitoring/requirements.txt
 
 RUN rm -rf __pycache__
 
+ADD ./interfaces /app/interfaces
 ADD ./monitoring /app/monitoring
 COPY ./monitoring/health_check.sh /app/health_check.sh
 WORKDIR /app/monitoring
