--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/uft.yaml
@@ -128,7 +128,7 @@ v1:
 
     artifacts:
         tested_roles:
-            report_path: tested_requirements.html
+            report_path: output/tested_requirements.html
             roles:
                 - name: Strategic Coordination role
                   requirement_set: astm.f3548.v21.scd
