--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -50,7 +50,7 @@ net_rid_sims:
   adjacent_circular_storage_config:
     resource_type: resources.netrid.FlightDataStorageResource
     specification:
-      flight_record_collection_path: "./test_data/che/netrid/circular_flights.json"
+      flight_record_collection_path: "./output/test_data.che.netrid.circular_flights.json"
   kml_flights_data:
     resource_type: resources.netrid.FlightDataResource
     specification:
@@ -59,7 +59,7 @@ net_rid_sims:
   kml_storage_config:
     resource_type: resources.netrid.FlightDataStorageResource
     specification:
-      flight_record_collection_path: "./test_data/usa/netrid/dcdemo_flights.json"
+      flight_record_collection_path: "./output/test_data.usa.netrid.dcdemo_flights.json"
 
 flight_auth:
   $ref: '#/f3548_che'
