--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,13 +65,10 @@ jobs:
         name: monitoring-tests-logs
         path: |
           logs
-          monitoring/mock_uss/tracer/logs
+          monitoring/mock_uss/output
     - name: Save USS qualifier report as artifact
       if: always()
       uses: actions/upload-artifact@v3
       with:
         name: monitoring-tests-report
-        path: |
-          monitoring/uss_qualifier/report.gv
-          monitoring/uss_qualifier/report.json
-          monitoring/uss_qualifier/tested_requirements.html
+        path: monitoring/uss_qualifier/output
