--- a/monitoring/uss_qualifier/configurations/dev/artifacts.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/artifacts.yaml
@@ -2,7 +2,7 @@
 # to be produced in the uss_qualifier folder.
 relative:
   report:
-    report_path: report.json
+    report_path: output/report.json
     redact_access_tokens: true
   graph:
-    gv_path: report.gv
+    gv_path: output/report.gv
