--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
@@ -60,9 +60,9 @@ v1:
 
   artifacts:
     report:
-      report_path: report.json
+      report_path: output/report.json
     tested_roles:
-      report_path: tested_requirements.html
+      report_path: output/tested_requirements.html
       roles: []
     graph:
-      gv_path: report.gv
+      gv_path: output/report.gv
