--- a/monitoring/uss_qualifier/configurations/dev/self_contained_f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/self_contained_f3548.yaml
@@ -73,12 +73,12 @@ v1:
   artifacts:
     report:
       # Path to main report output
-      report_path: report.json
+      report_path: output/report.json
       redact_access_tokens: true
 
     # Information about a report including a list of roles tested and which participants are attempting to fill them
     tested_roles:
-      report_path: tested_requirements.html
+      report_path: output/tested_requirements.html
       roles:
         - name: Strategic Coordination role
           requirement_set: astm.f3548.v21.scd
@@ -88,4 +88,4 @@ v1:
 
     graph:
       # Path to output GraphViz test file summarizing test run
-      gv_path: report.gv
+      gv_path: output/report.gv
