--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -1,151 +1,91 @@
 all:
-  allOf:
-  - $ref: '#/uspace'
-  - $ref: '#/net_rid_sims'
+    allOf:
+        -   $ref: '#/uspace'
+        -   $ref: '#/net_rid_sims'
 
 uspace:
-  allOf:
-  - $ref: '#/net_rid'
-  - $ref: '#/flight_auth'
+    allOf:
+        -   $ref: '#/net_rid'
+        -   $ref: '#/flight_auth'
 
 net_rid:
-  $ref: '#/common'
-  netrid_service_providers:
-    resource_type: resources.netrid.NetRIDServiceProviders
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      service_providers:
-      - participant_id: uss1
-        injection_base_url: http://host.docker.internal:8071/ridsp/injection
-  netrid_observers:
-    resource_type: resources.netrid.NetRIDObserversResource
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      observers:
-      - participant_id: uss2
-        observation_base_url: http://host.docker.internal:8073/riddp/observation
-  netrid_observation_evaluation_configuration:
-    resource_type: resources.netrid.EvaluationConfigurationResource
-    specification: {}
-  netrid_dss_instances_v19:
-    resource_type: resources.astm.f3411.DSSInstancesResource
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      dss_instances:
-        - participant_id: uss1
-          rid_version: F3411-19
-          base_url: http://host.docker.internal:8082
-        - participant_id: uss2
-          rid_version: F3411-19
-          base_url: http://host.docker.internal:8082
+    allOf:
+        -   $ref: '#/common'
+        -   $ref: 'environment.yaml#/net_rid'
+    netrid_observation_evaluation_configuration:
+        resource_type: resources.netrid.EvaluationConfigurationResource
+        specification: { }
 
 net_rid_sims:
-  adjacent_circular_flights_data:
-    resource_type: resources.netrid.FlightDataResource
-    specification:
-      adjacent_circular_flights_simulation_source: {}
-  adjacent_circular_storage_config:
-    resource_type: resources.netrid.FlightDataStorageResource
-    specification:
-      flight_record_collection_path: "./output/test_data.che.netrid.circular_flights.json"
-  kml_flights_data:
-    resource_type: resources.netrid.FlightDataResource
-    specification:
-      kml_source:
-        kml_location: file://./test_data/usa/netrid/dcdemo.kml
-  kml_storage_config:
-    resource_type: resources.netrid.FlightDataStorageResource
-    specification:
-      flight_record_collection_path: "./output/test_data.usa.netrid.dcdemo_flights.json"
+    adjacent_circular_flights_data:
+        resource_type: resources.netrid.FlightDataResource
+        specification:
+            adjacent_circular_flights_simulation_source: { }
+    adjacent_circular_storage_config:
+        resource_type: resources.netrid.FlightDataStorageResource
+        specification:
+            flight_record_collection_path: "./output/test_data.che.netrid.circular_flights.json"
+    kml_flights_data:
+        resource_type: resources.netrid.FlightDataResource
+        specification:
+            kml_source:
+                kml_location: file://./test_data/usa/netrid/dcdemo.kml
+    kml_storage_config:
+        resource_type: resources.netrid.FlightDataStorageResource
+        specification:
+            flight_record_collection_path: "./output/test_data.usa.netrid.dcdemo_flights.json"
 
 flight_auth:
-  $ref: '#/f3548_che'
-  invalid_flight_auth_flights:
-    resource_type: resources.flight_planning.FlightIntentsResource
-    specification:
-      planning_time: '0:05:00'
-      file_source: file://./test_data/che/flight_intents/invalid_flight_auths.json
+    $ref: '#/f3548_che'
+    invalid_flight_auth_flights:
+        resource_type: resources.flight_planning.FlightIntentsResource
+        specification:
+            planning_time: '0:05:00'
+            file_source: file://./test_data/che/flight_intents/invalid_flight_auths.json
 
 che_flight_intents:
-  conflicting_flights:
-    resource_type: resources.flight_planning.FlightIntentsResource
-    specification:
-      planning_time: '0:05:00'
-      file_source: file://./test_data/che/flight_intents/conflicting_flights.json
-  priority_preemption_flights:
-    resource_type: resources.flight_planning.FlightIntentsResource
-    specification:
-      planning_time: '0:05:00'
-      file_source: test_data.che.flight_intents.priority_preemption
+    conflicting_flights:
+        resource_type: resources.flight_planning.FlightIntentsResource
+        specification:
+            planning_time: '0:05:00'
+            file_source: file://./test_data/che/flight_intents/conflicting_flights.json
+    priority_preemption_flights:
+        resource_type: resources.flight_planning.FlightIntentsResource
+        specification:
+            planning_time: '0:05:00'
+            file_source: test_data.che.flight_intents.priority_preemption
 
 kentland_flight_intents:
-  conflicting_flights:
-    resource_type: resources.flight_planning.FlightIntentsResource
-    specification:
-      planning_time: '0:05:00'
-      file_source: file://./test_data/usa/kentland/flight_intents/conflicting_flights.yaml
-  priority_preemption_flights:
-    resource_type: resources.flight_planning.FlightIntentsResource
-    specification:
-      planning_time: '0:05:00'
-      file_source: test_data.usa.kentland.flight_intents.priority_preemption
+    conflicting_flights:
+        resource_type: resources.flight_planning.FlightIntentsResource
+        specification:
+            planning_time: '0:05:00'
+            file_source: file://./test_data/usa/kentland/flight_intents/conflicting_flights.yaml
+    priority_preemption_flights:
+        resource_type: resources.flight_planning.FlightIntentsResource
+        specification:
+            planning_time: '0:05:00'
+            file_source: test_data.usa.kentland.flight_intents.priority_preemption
 
 f3548_che:
-  allOf:
-    - $ref: '#/f3548'
-    - $ref: '#/che_flight_intents'
+    allOf:
+        -   $ref: '#/f3548'
+        -   $ref: '#/che_flight_intents'
 
 f3548_kentland:
-  allOf:
-  - $ref: '#/f3548'
-  - $ref: '#/kentland_flight_intents'
+    allOf:
+        -   $ref: '#/f3548'
+        -   $ref: '#/kentland_flight_intents'
 
 f3548:
-  $ref: '#/common'
-  flight_planners:
-    resource_type: resources.flight_planning.FlightPlannersResource
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      flight_planners:
-      # uss1 is the mock_uss directly exposing scdsc functionality
-      - participant_id: uss1
-        injection_base_url: http://host.docker.internal:8074/scdsc
-      # uss2 uses atproxy, with requests being fulfilled by mock_uss with atproxy_client functionality enabled
-      - participant_id: uss2
-        injection_base_url: http://host.docker.internal:8075/scd
-  dss:
-    resource_type: resources.astm.f3548.v21.DSSInstanceResource
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      participant_id: uss1
-      base_url: http://host.docker.internal:8082
+    allOf:
+        -   $ref: '#/common'
+        -   $ref: 'environment.yaml#/f3548'
 
 f3548_single_scenario:
-  $ref: '#/f3548_che'
-  uss1:
-    resource_type: resources.flight_planning.FlightPlannerResource
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      flight_planner:
-        participant_id: uss1
-        injection_base_url: http://host.docker.internal:8074/scdsc
-  uss2:
-    resource_type: resources.flight_planning.FlightPlannerResource
-    dependencies:
-      auth_adapter: utm_auth
-    specification:
-      flight_planner:
-        participant_id: uss2
-        injection_base_url: http://host.docker.internal:8074/scdsc
+    allOf:
+        -   $ref: '#/f3548_che'
+        -   $ref: 'environment.yaml#/f3548_single_scenario'
 
 common:
-  utm_auth:
-    resource_type: resources.communications.AuthAdapterResource
-    specification:
-      environment_variable_containing_auth_spec: AUTH_SPEC
+    $ref: 'environment.yaml#/common'
