--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@
 
 aiohttp==3.8.0
 arrow==1.1.0
+bc-jsonpath-ng==1.5.9  # uss_qualifier
 cryptography==3.3.2
 faker===8.1.0  # uss_qualifier
 flask==1.1.2
@@ -17,7 +18,6 @@ gunicorn==20.1.0
 implicitdict==2.1.0
 itsdangerous==2.0.1 # Version 2.1.0 is not compatible with flask 1.1.2.
 Jinja2==3.0.3 # See https://github.com/interuss/dss/issues/745
-jsonpath-ng==1.5.3  # uss_qualifier
 jsonschema==4.17.3  # uss_qualifier
 jwcrypto==1.4
 kubernetes==23.3.0  # deployment_manager
