--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -30,3 +30,9 @@ actions:
       evaluation_configuration: evaluation_configuration
       dss_instances: netrid_dss_instances
   on_failure: Continue
+participant_badges:
+    - id: required_services
+      name: U-space Required Services (work in progress)
+      description: Participant fulfills all implemented tests for all testable requirements necessary to provide all required services in U-space.  Note that this test suite is not yet complete, so this badge is not yet a good indication that all testable requirements have been met.
+      grant_condition:
+          no_failed_checks: {}
