--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/conflicting_flights.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/conflicting_flights.yaml
@@ -62,11 +62,12 @@ intents:
           uas_type_certificate: ''
 
   first_flight_activated:
-    delta_source: first_flight
-    delta_mutation:
-      request:
-        operational_intent:
-          state: Accepted
+    delta:
+      source: first_flight
+      mutation:
+        request:
+          operational_intent:
+            state: Accepted
 
   conflicting_flight:
     full:
