--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
@@ -62,11 +62,12 @@ intents:
           uas_type_certificate: ''
 
   first_flight_activated:
-    delta_source: first_flight
-    delta_mutation:
-      request:
-        operational_intent:
-          state: Activated
+    delta:
+      source: first_flight
+      mutation:
+        request:
+          operational_intent:
+            state: Activated
 
   priority_flight:
     full:
@@ -121,8 +122,9 @@ intents:
           uas_type_certificate: ''
 
   priority_flight_activated:
-    delta_source: priority_flight
-    delta_mutation:
-      request:
-        operational_intent:
-          state: Activated
+    delta:
+      source: priority_flight
+      mutation:
+        request:
+          operational_intent:
+            state: Activated
