--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/conflicting_flights.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/conflicting_flights.yaml
@@ -67,7 +67,10 @@ intents:
       mutation:
         request:
           operational_intent:
-            state: Accepted
+            volumes:
+              - time_start:
+                  value: '2023-01-01T00:03:00+00:00'
+            state: Activated
 
   conflicting_flight:
     full:
