--- a/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/faa/uft/local_message_signing.yaml
@@ -11,10 +11,13 @@ v1:
             flight_planners:
             - participant_id: uss1
               injection_base_url: http://host.docker.internal:8074/scdsc
+              allows_same_priority_intersections: false
             - participant_id: uss2
               injection_base_url: http://host.docker.internal:8074/scdsc
+              allows_same_priority_intersections: false
             - participant_id: mock_uss
               injection_base_url: http://host.docker.internal:8074/scdsc
+              allows_same_priority_intersections: false
         combination_selector:
           resource_type: resources.flight_planning.FlightPlannerCombinationSelectorResource
           specification:
