--- a/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/non_docker/resources.yaml
@@ -79,8 +79,10 @@ f3548:
       flight_planners:
       - participant_id: uss1
         injection_base_url: http://localhost:8074/scdsc
+        allows_same_priority_intersections: false
       - participant_id: uss2
         injection_base_url: http://localhost:8074/scdsc
+        allows_same_priority_intersections: false
   conflicting_flights:
     resource_type: resources.flight_planning.FlightIntentsResource
     specification:
