--- a/monitoring/uss_qualifier/configurations/dev/self_contained_f3548.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/self_contained_f3548.yaml
@@ -39,9 +39,11 @@ v1:
             # uss1 is the mock_uss directly exposing scdsc functionality
             - participant_id: uss1
               injection_base_url: http://host.docker.internal:8074/scdsc
+              allows_same_priority_intersections: false
             # uss2 uses atproxy, with requests being fulfilled by mock_uss with atproxy_client functionality enabled
             - participant_id: uss2
               injection_base_url: http://host.docker.internal:8075/scd
+              allows_same_priority_intersections: false
 
         # Details of conflicting flights (used in nominal planning scenario)
         conflicting_flights:
