Add report HTML artifact

--- a/monitoring/uss_qualifier/configurations/dev/artifacts.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/artifacts.yaml
@@ -6,3 +6,5 @@ relative:
     redact_access_tokens: true
   graph:
     gv_path: output/report.gv
+  report_html:
+    html_path: output/report.html
