--- a/monitoring/uss_qualifier/configurations/dev/f3548/nominal_planning_conflict_higher_priority.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548/nominal_planning_conflict_higher_priority.yaml
@@ -5,10 +5,10 @@ v1:
         "$ref": ../resources.yaml#/f3548_single_scenario
     action:
       test_scenario:
-        scenario_type: scenarios.astm.utm.NominalPlanningPriority
+        scenario_type: scenarios.astm.utm.ConflictHigherPriority
         resources:
-          uss1: uss1
-          uss2: uss2
+          tested_uss: uss1
+          control_uss: uss2
           flight_intents: priority_preemption_flights
           dss: dss
   artifacts:
