--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/priority_preemption.yaml
@@ -1,5 +1,5 @@
 intents:
-  first_flight:
+  flight_1_planned_time_range_A:
     full:
       reference_time: '2023-01-01T00:00:00+00:00'
       request:
@@ -61,17 +61,17 @@ intents:
           uas_id: ''
           uas_type_certificate: ''
 
-  first_flight_activated:
+  flight_1_activated_time_range_A:
     delta:
-      source: first_flight
+      source: flight_1_planned_time_range_A
       mutation:
         request:
           operational_intent:
             state: Activated
 
-  first_flight_time_range_A_extended:
+  flight_1_planned_time_range_A_extended:
     delta:
-      source: first_flight
+      source: flight_1_planned_time_range_A
       mutation:
         request:
           operational_intent:
@@ -80,9 +80,17 @@ intents:
                   value: '2023-01-01T00:02:00+00:00'
                   format: RFC3339
 
-  first_flight_time_range_B:
+  flight_1_activated_time_range_A_extended:
     delta:
-      source: first_flight
+      source: flight_1_planned_time_range_A_extended
+      mutation:
+        request:
+          operational_intent:
+            state: Activated
+
+  flight_1_activated_time_range_B:
+    delta:
+      source: flight_1_activated_time_range_A_extended
       mutation:
         request:
           operational_intent:
@@ -94,7 +102,7 @@ intents:
                   value: '2023-01-01T00:10:00+00:00'
                   format: RFC3339
 
-  priority_flight:
+  flight_2_planned_time_range_A:
     full:
       reference_time: '2023-01-01T00:00:00+00:00'
       request:
@@ -146,17 +154,17 @@ intents:
           uas_id: ''
           uas_type_certificate: ''
 
-  priority_flight_activated:
+  flight_2_activated_time_range_A:
     delta:
-      source: priority_flight
+      source: flight_2_planned_time_range_A
       mutation:
         request:
           operational_intent:
             state: Activated
 
-  priority_flight_time_range_B:
+  flight_2_activated_time_range_B:
     delta:
-      source: priority_flight
+      source: flight_2_activated_time_range_A
       mutation:
         request:
           operational_intent:
