--- a/monitoring/uss_qualifier/suites/dev/local_test.yaml
+++ b/monitoring/uss_qualifier/suites/dev/local_test.yaml
@@ -11,6 +11,7 @@ resources:
   flight_planners: resources.flight_planning.FlightPlannersResource
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
+  invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
   dss: resources.astm.f3548.v21.DSSInstanceResource
 
@@ -29,6 +30,7 @@ actions:
     resources:
       conflicting_flights: conflicting_flights
       priority_preemption_flights: priority_preemption_flights
+      invalid_flight_intents: invalid_flight_intents
       invalid_flight_auth_flights: invalid_flight_auth_flights
       flight_planners: flight_planners
       dss: dss
