--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -3,6 +3,7 @@ resources:
   conflicting_flights: resources.flight_planning.FlightIntentsResource
   priority_preemption_flights: resources.flight_planning.FlightIntentsResource
   invalid_flight_auth_flights: resources.flight_planning.FlightIntentsResource
+  invalid_flight_intents: resources.flight_planning.FlightIntentsResource
   flight_planners: resources.flight_planning.FlightPlannersResource
   dss: resources.astm.f3548.v21.DSSInstanceResource
 
@@ -12,6 +13,7 @@ actions:
     resources:
       conflicting_flights: conflicting_flights
       priority_preemption_flights: priority_preemption_flights
+      invalid_flight_intents: invalid_flight_intents
       flight_planners: flight_planners
       dss: dss
   on_failure: Continue
