--- a/monitoring/uss_qualifier/configurations/dev/resources.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/resources.yaml
@@ -71,7 +71,11 @@ kentland_flight_intents:
         specification:
             planning_time: '0:05:00'
             file_source: test_data.usa.kentland.flight_intents.priority_preemption
-    # TODO: add invalid_flight_intents test data for kentland
+    invalid_flight_intents:
+      resource_type: resources.flight_planning.FlightIntentsResource
+      specification:
+        planning_time: '0:05:00'
+        file_source: test_data.usa.kentland.flight_intents.invalid_flight_intents
 
 f3548_che:
     allOf:
