--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -20,11 +20,11 @@ actions:
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
     on_failure: Continue
-participant_badges:
+participant_verifiable_capabilities:
     - id: service_provider
       name: NetRID Service Provider
       description: Participant fulfills testable requirements necessary to act as a NetRID Service Provider according to F3411-19.
-      grant_condition:
+      verification_condition:
           requirements_checked:
               checked:
                   requirement_sets:
@@ -32,7 +32,7 @@ participant_badges:
     - id: display_provider
       name: NetRID Display Provider
       description: Participant fulfills testable requirements necessary to act as a NetRID Display Provider according to F3411-19.
-      grant_condition:
+      verification_condition:
           requirements_checked:
             checked:
                 requirement_sets:
@@ -40,7 +40,7 @@ participant_badges:
     - id: dss_operator
       name: NetRID DSS Operator
       description: Participant fulfills testable requirements necessary to act operate a NetRID Discovery and Synchronization Service instance according to F3411-19.
-      grant_condition:
+      verification_condition:
           requirements_checked:
             checked:
                 requirement_sets:
