--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -15,11 +15,11 @@ actions:
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
     on_failure: Continue
-participant_badges:
+participant_verifiable_capabilities:
   - id: service_provider
     name: NetRID Service Provider
     description: Participant fulfills testable requirements necessary to act as a NetRID Service Provider according to F3411-22a.
-    grant_condition:
+    verification_condition:
       requirements_checked:
         checked:
           requirement_sets:
@@ -27,7 +27,7 @@ participant_badges:
   - id: service_provider_intent_based
     name: NetRID Service Provider with intent-based network participant support capability
     description: Participant fulfills testable requirements necessary to provide Intent-based participant support capability according to F3411-22a.
-    grant_condition:
+    verification_condition:
       requirements_checked:
         checked:
           requirement_sets:
@@ -35,7 +35,7 @@ participant_badges:
   - id: service_provider_extrapolation
     name: NetRID Service Provider with position extrapolation capability
     description: Participant fulfills testable requirements necessary to provide position extrapolation capability according to F3411-22a.
-    grant_condition:
+    verification_condition:
       requirements_checked:
         checked:
           requirement_sets:
@@ -43,7 +43,7 @@ participant_badges:
   - id: display_provider
     name: NetRID Display Provider
     description: NetRID Display Provider
-    grant_condition:
+    verification_condition:
       requirements_checked:
         checked:
           requirement_sets:
@@ -51,7 +51,7 @@ participant_badges:
   - id: dss_operator
     name: NetRID DSS Operator
     description: Participant fulfills testable requirements necessary to act operate a NetRID Discovery and Synchronization Service instance according to F3411-22a.
-    grant_condition:
+    verification_condition:
       requirements_checked:
         checked:
           requirement_sets:
