Add U-Space Network Identification suite

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -23,7 +23,7 @@ participant_verifiable_capabilities:
       requirements_checked:
         checked:
           requirement_sets:
-            - "astm.f3411.v22a.service_provider#Automated verification"
+            - "astm.f3411.v22a.service_provider#Mandatory requirements"
   - id: service_provider_intent_based
     name: NetRID Service Provider with intent-based network participant support capability
     description: Participant fulfills testable requirements necessary to provide Intent-based participant support capability according to F3411-22a.
@@ -96,7 +96,7 @@ participant_verifiable_capabilities:
       requirements_checked:
         checked:
           requirement_sets:
-            - "astm.f3411.v22a.display_provider#Automated verification"
+            - "astm.f3411.v22a.display_provider#Mandatory requirements"
   - id: display_provider_operator_id_field
     name: NetRID Display Provider transmitting operator id data field
     description: Participant fulfills testable requirements necessary to transmit operator id data field according to F3411-22a.
@@ -169,4 +169,4 @@ participant_verifiable_capabilities:
       requirements_checked:
         checked:
           requirement_sets:
-            - "astm.f3411.v22a.dss_provider#Automated verification"
+            - "astm.f3411.v22a.dss_provider#Mandatory requirements"
